Fixed collapsed folder margin (#42)

--- a/Nebula/modules/Tabfolders.css
+++ b/Nebula/modules/Tabfolders.css
@@ -25,7 +25,7 @@ tab-group:not([split-view-group]) {
   }
 
   border-radius: calc(var(--border-radius-medium) + 2px) !important;
-  margin: 2px 2px 2px 2px;
+  margin: calc(var(--zen-element-separation) / 2) 2px;
   transition: max-height 0.75s cubic-bezier(0.4, 0, 0.2, 1);
   overflow: hidden !important;
 
